fix: modify responsive on mobile

--- a/src/assets/sass/_defaults.scss
+++ b/src/assets/sass/_defaults.scss
@@ -22,6 +22,10 @@ hr {
   margin-bottom: 30px;
 }
 
+img {
+  max-width: 100%;
+}
+
 h2 {
   color: #1f1f1f;
   font-size: 36px;
