--- a/src/assets/sass/_theme.scss
+++ b/src/assets/sass/_theme.scss
@@ -99,20 +99,19 @@
   position: relative;
 
   &__backgrounds {
-    > img {
+    &--left {
       position: absolute;
       bottom: 0;
-      left: 0;
       height: 100%;
       z-index: 1;
-      min-width: 100%;
-    }
-
-    &--left {
       left: 0;
     }
 
     &--right {
+      position: absolute;
+      bottom: 0;
+      height: 100%;
+      z-index: 1;
       right: 0;
     }
   }
